--- a/template/html/accueil.html
+++ b/template/html/accueil.html
@@ -4,17 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="/style/accueil.css">
+    <title>Le Forum</title>
 </head>
 
 <body>
     <h1>Bienvenue sur le Forum </h1>
     <h2>Les sujets du forum</h2>
-    <ul>
-        <li>Les animaux</li>
-        <li>Les plantes</li>
-        <li>Les voitures</li>
-        <li>Les jeux vidéos</li>
+    
 
 </body>
 
