--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -8,24 +8,26 @@
 </head>
 <body>
 <div class="header">Nom du forum</div>
-<div class="profile-section">
-    <div class="profile-pic">pp du profil</div>
-    <div class="info-section">
-        <div>username :</div>
-        <div>name :</div>
-        <div>firstname :</div>
-        <div>mail :</div>
-        <div>other link :</div>
-        <div class="links-section">
-            <a href="#">discord</a>
-            <a href="#">steam</a>
-            <a href="#">riot client</a>
-            <a href="#">psn</a>
+<div class="profile-wrapper">
+    <div class="profile-container">
+        <div class="profile-pic">pp du profil</div>
+        <div class="info-section">
+            <div>username :</div>
+            <div>name :</div>
+            <div>firstname :</div>
+            <div>mail :</div>
+            <div>other link :</div>
+            <div class="links-section">
+                <a href="#">discord</a>
+                <a href="#">steam</a>
+                <a href="#">riot client</a>
+                <a href="#">psn</a>
+            </div>
         </div>
     </div>
-</div>
-<div class="birthdate-section">
-    date de naissance
+    <div class="birthdate-section">
+        date de naissance
+    </div>
 </div>
 </body>
 </html>
