[Post] Login/Register/Password page commit3 it's good

--- a/template/html/connexion.html
+++ b/template/html/connexion.html
@@ -74,7 +74,7 @@
             <div class="back-to-login">
                 <i class='bx bx-chevron-left'></i>
                 <p>
-                    <a href="#loginForm" class="login-link">Login</a>
+                    <a href="#loginForm2" class="login-link">Login</a>
                 </p>
             </div>
             <h1>You forgot your password ?</h1>
