--- a/template/html/connexion.html
+++ b/template/html/connexion.html
@@ -8,25 +8,35 @@
     <title>Title</title>
     <link rel="stylesheet" href="../css/connexion.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script src="https://kit.fontawesome.com/d1a5a942fc.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="wrapper" id="loginForm">
         <form action="" method="get">
             <h1>Login</h1>
-            <div class="input-box">
-                <input type="text"
-                       placeholder="Username" required>
+            <div class="input-boxUser">
+                <label>
+                    <input type="text"
+                           id="userName"
+                           placeholder="Username" required>
+                </label>
                 <i class='bx bxs-user'></i>
             </div>
-            <div class="input-box">
-                <input type="password"
-                       placeholder="Password"
-                       required>
+            <div class="input-boxPass">
+                <label>
+                    <input type="password"
+                           id="passWord"
+                           placeholder="Password"
+                           required>
+                </label>
+                <div class="eyePassword">
+                <i class="fa-solid fa-eye"></i>
+                </div>
                 <i class='bx bxs-lock'></i>
             </div>
             <div class="remember-forgot">
-                <label><input type="checkbox">Remember me</label>
+                <label><input type="checkbox" onclick="setCookies()">Remember me</label>
                 <a href="#ForgotPassword">Forgot Password? </a>
             </div>
             <button type="submit" class="btn">Login</button>
@@ -35,6 +45,26 @@
                     <a href="#registerForm">Register</a>
                 </p>
             </div>
+            <script>
+                let input =document.querySelector('.input-boxPass input')
+                let showBtn =document.querySelector('.eyePassword i')
+                showBtn.onclick=function () {
+                    if(input.type === "password"){
+                        input.type = "text";
+                        showBtn.classList.add('active');
+                    }else {
+                        input.type = "password";
+                        showBtn.classList.remove('active');
+                    }
+                }
+                function setCookies() {
+                    var u = document.getElementById('userName').value;
+                    var p = document.getElementById('passWord').value;
+
+                    document.cookie="myusername"+u+";path=/";
+                    document.cookie="mypassWord"+p+";path=/";
+                }
+            </script>
         </form>
     </div>
 
@@ -59,13 +89,29 @@
                        required>
                 <i class='bx bxs-envelope'></i>
             </div>
-            <div class="input-box">
+            <div class="input-boxPass2">
                 <input type="password"
                        placeholder="Password"
                        required>
+                <div class="eyePassword2">
+                    <i class="fa-solid fa-eye"></i>
+                </div>
                 <i class='bx bxs-lock'></i>
             </div>
             <button type="submit" class="btn">Register</button>
+            <script>
+                let input2 =document.querySelector('.input-boxPass2 input')
+                let showBtn2 =document.querySelector('.eyePassword2 i')
+                showBtn2.onclick=function () {
+                    if(input2.type === "password"){
+                        input2.type = "text";
+                        showBtn2.classList.add('active2');
+                    }else {
+                        input2.type = "password";
+                        showBtn2.classList.remove('active2');
+                    }
+                }
+            </script>
         </form>
     </div>
 
