[front] css color an return button added

--- a/templates/html/profil.html
+++ b/templates/html/profil.html
@@ -8,6 +8,12 @@
 </head>
 <body>
 <div class="header">Nom du forum</div>
+<button class="back-button" onclick="goBack()">Retour</button>
+<script>
+    function goBack() {
+        window.history.back();
+    }
+</script>
 <div class="profile-wrapper">
     <div class="profile-container">
         <div class="profile-pic" id="profile-pic">pp du profil</div>
