--- a/templates/css/profil.css
+++ b/templates/css/profil.css
@@ -75,3 +75,11 @@ body {
     top: 50px;
     text-align: center;
 }
+
+.back-button{
+    background-color: #408EC6;
+    color: #FFFFFF;
+    padding: 5px;
+    border-radius: 5px;
+    text-decoration: none;
+}
