--- a/template/html/connexion.html
+++ b/template/html/connexion.html
@@ -92,6 +92,14 @@
                     <a href="#loginForm" class="login-link">Login</a>
                 </p>
             </div>
+            <div class="autentification">
+                <div class="autentification-google">
+                </div>
+                <div class="autentification-facebook">
+                </div>
+                <div class="autentification-github">
+                </div>
+            </div>
             <h1>Register</h1>
             <div class="input-box">
                 <input type="text"
