--- a/template/css/post.css
+++ b/template/css/post.css
@@ -2,162 +2,257 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #9e8174;
+    background-image: url('../images/fond-ecran-forum.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
 }
 
 .container {
     display: flex;
     height: 100vh;
+    position: relative;
+    z-index: 1;
+    justify-content: space-between; /* Équilibre les sections */
 }
 
 .profile-section {
-    background-color: #b49b8f;
-    border-radius: 15px;
-    width: 20%;
+    width: 10%;
+    height: auto;
     padding: 15px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background: rgba(255, 255, 255, 0.15);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(1.1px);
+    -webkit-backdrop-filter: blur(1.1px);
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    flex-shrink: 0; /* Empêche la réduction */
 }
-
 .profile {
-    background-color: #d3c4bc;
+    background-color: #85aefa;
     border-radius: 10px;
     padding: 10px;
     text-align: center;
     width: 100%;
     margin-bottom: 10px;
-}
-
-.filters {
-    width: 100%;
-}
-
-.search {
-    display: block;
-    background-color: #b49b8f;
-    padding: 10px;
-    margin-bottom: 10px;
-}
-
-.search input {
-    border-radius: 15px;
-    width: 100%;
-    padding: 7px;
-    margin-bottom: 5px;
-}
-
-.search button {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 5px;
-    background-color: #337ab7;
-    border-radius: 15px;
-    color: white;
-    border: none;
-    cursor: pointer;
+    position: relative; /* Nécessaire pour le z-index */
+    z-index: 2; /* Met le contenu au-dessus de l'image de fond */
 }
 
 .side-section {
-    background-color: #b49b8f;
-    border-radius: 15px;
     width: 20%;
     padding: 10px;
+    background: rgba(255, 255, 255, 0.15);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(1.1px);
+    -webkit-backdrop-filter: blur(1.1px);
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    flex-shrink: 0; /* Empêche la réduction */
+}
+
+.main-section {
+    flex-grow: 1; /* Prend tout l'espace restant */
+    padding: 10px;
+    text-align: center;
+    position: relative;
+    z-index: 2;
+}
+
+.title {
+    font-size: 40px;
+    font-weight: bold;
+    padding: 30px;
+    margin-bottom: 10px;
+    overflow-wrap: break-word;
+    background: rgba(255, 255, 255, 0.31);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6.5px);
+    -webkit-backdrop-filter: blur(6.5px);
+    border: 1px solid rgba(255, 255, 255, 0.55);
+}
+
+.posts {
+    text-align: left;
+    position: relative;
+    z-index: 2;
+}
+
+.post-detail {
+    padding: 20px;
+    margin-top: 30px;
+    margin-bottom: 35px;
+    text-align: left;
+    background: rgba(255, 255, 255, 0.31);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6.5px);
+    -webkit-backdrop-filter: blur(6.5px);
+    border: 1px solid rgba(255, 255, 255, 0.55);
+}
+
+.post-detail h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+    position: relative;
+    z-index: 2;
+}
+
+.post-detail .post-content {
+    padding-bottom: 30px;
+    border-bottom: 1px solid #85aefa;
+    margin-bottom: 20px;
+    position: relative;
+    z-index: 2;
+}
+
+.post-detail .post-content input {
+    width: 50%;
+    height: 30px;
+    padding: 8px;
+    margin-top: 16px;
+    border: 2px solid #ccc;
+    border-radius: 8px;
+    resize: none;
+    position: relative;
+    z-index: 2;
+}
+
+.post-detail .post-description {
+    width: 95%;
+    height: 220px;
+    padding: 12px;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    border: 2px solid #ccc;
+    border-radius: 8px;
+    resize: none;
+    position: relative;
+    z-index: 2;
+}
+
+.post-detail .comments {
+    padding-top: 2px;
+    position: relative;
+    z-index: 2;
+}
+
+.comment-text {
+    width: 95%;
+    height: 50px;
+    padding: 12px;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    border: 2px solid #ccc;
+    border-radius: 8px;
+    resize: none;
+    position: relative;
+    z-index: 2;
+}
+
+.post-detail .comment {
+    margin-bottom: 5px;
+    position: relative;
+    z-index: 2;
+}
+
+.post-author {
+    margin-bottom: 1px;
+    font-weight: bold;
+    position: relative;
+    z-index: 2;
 }
 
 .categories, .hashtags {
-    background-color: #b49b8f;
     padding: 10px;
     margin-bottom: 10px;
+    background: rgba(255, 255, 255, 0.15);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(8.3px);
+    -webkit-backdrop-filter: blur(8.3px);
+    border: 1px solid rgba(255, 255, 255, 0.12);
 }
 
 .categories h3, .hashtags h3 {
     margin: 0;
     margin-bottom: 10px;
+    position: relative;
+    z-index: 2;
 }
 
 .categories ul, .hashtags ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
+    position: relative;
+    z-index: 2;
 }
 
 .categories li, .hashtags li {
     margin-bottom: 5px;
+    position: relative;
+    z-index: 2;
 }
 
-.main-section {
-    background-color: #9e8174;
-    width: 60%;
-    padding: 10px;
+.categories .createCategory, .createHashtags {
+    display: inline-block;
+    align-items: center;
+    margin-bottom: 8px;
+    padding: 8px 10px;
+    font-size: 15px;
+    font-weight: bold;
+    color: #fff;
+    background-color: #4181f8;
+    border: none;
+    border-radius: 50px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     text-align: center;
+    text-decoration: none;
+    transition: background-color 0.3s, transform 0.3s;
+    cursor: pointer;
+    border-bottom: 1px solid #85aefa;
+    position: relative;
+    z-index: 2;
 }
 
-.title {
-    background-color: #d3c4bc;
-    font-size: 40px;
-    font-weight: bold;
-    border-radius: 15px;
-    padding: 30px;
-    margin-bottom: 10px;
-    overflow-wrap: break-word; /* Pour éviter que le texte ne dépasse */
+.categories .createCategory::placeholder, .createHashtags::placeholder {
+    color: #fff;
 }
 
-.posts {
-    text-align: left;
+.categoryBtn, .hashtagsBtn {
+    align-items: center;
+    padding: 5px 20px;
+    font-size: 13px;
+    font-weight: normal;
+    color: #fff;
+    background-color: #4181f8;
+    border: none;
+    border-radius: 50px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    text-decoration: none;
+    transition: background-color 0.3s, transform 0.3s;
+    cursor: pointer;
+    margin-bottom: 8px;
+    position: relative;
+    z-index: 2;
 }
 
-.post-detail {
-    background-color: #e8dcd7;
-    border-radius: 15px;
-    padding: 20px;
-    margin-top: 30px;
-    margin-bottom: 35px;
-    text-align: left;
+.categoryBtn:hover, .hashtagsBtn:hover {
+    background-color: #45a049;
+    transform: translateY(-3px);
 }
 
-.post-detail h2 {
-    font-size: 24px;
-    margin-bottom: 10px;
-}
-
-.post-detail .post-content {
-    padding-bottom: 30px; /* Taille prédéfinie pour la zone de description */
-    border-bottom: 1px solid #b49b8f;
-    margin-bottom: 20px;
-}
-
-.post-detail .post-content input{
-    width: 50%;
-    height: 30px; /* Hauteur prédéfinie de la boîte de description */
-    padding: 8px;
-    margin-bottom: 10px;
-    margin-top: 30px;
-    border: 2px solid #ccc;
-    border-radius: 8px;
-    resize: none; /* Empêcher le redimensionnement */
-}
-
-.post-detail .post-description {
-    width: 95%;
-    height: 220px; /* Hauteur prédéfinie de la boîte de description */
-    padding: 12px;
-    margin-bottom: 30px;
-    margin-top: 30px;
-    border: 2px solid #ccc;
-    border-radius: 8px;
-    resize: none; /* Empêcher le redimensionnement */
-}
-
-.post-detail .comments {
-    padding-top: 20px;
-}
-
-.post-detail .comment {
-    margin-bottom: 15px;
-}
-
-.post-author {
-    margin-bottom: 10px;
-    font-weight: bold;
+.categoryBtn:active, .hashtagsBtn:active {
+    background-color: #3e8e41;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    transform: translateY(0);
 }
