--- a/templates/html/profil.html
+++ b/templates/html/profil.html
@@ -18,18 +18,18 @@
     <div class="profile-container">
         <div class="profile-pic" id="profile-pic">pp du profil</div>
         <div class="info-section">
-            <div id="username">Username :</div><p></p>
-            <div id="name">Name :</div><p></p>
-            <div id="firstname">Firstname :</div><p></p>
-            <div id="birthdate-section">Birthdate :</div><p></p>
-            <div id="email">Mail :</div><p></p>
+            <div class="info-item"><span id="username">Username :</span><p>bonjour</p></div>
+            <div class="info-item"><span id="name">Name :</span><p>bonjour</p></div>
+            <div class="info-item"><span id="firstname">Firstname :</span><p>bonjour</p></div>
+            <div class="info-item"><span id="birthdate-section">Birthdate :</span><p>bonjour</p></div>
+            <div class="info-item"><span id="email">Mail :</span><p>bonjour</p></div>
 
-            <div id="other-link">Other link :</div>
+            <div class="info-item"><span id="other-link">Other link :</span></div>
             <div class="links-section">
                 <a href="#" id="google-link">Google</a>
                 <a href="#" id="github-link">Github</a>
                 <a href="#" id="riot-client-link">Riot Games</a>
-                <a href="#" id="facebook-link">facebook</a>
+                <a href="#" id="facebook-link">Facebook</a>
             </div>
         </div>
     </div>
