[main] image de fond ok

--- a/template/css/connexion.css
+++ b/template/css/connexion.css
@@ -12,7 +12,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-image: url('../ressource/image/fond-ecran-forum.jpg');
+    background-image: url('/image/fond-ecran-forum.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
