--- a/template/html/post.html
+++ b/template/html/post.html
@@ -9,7 +9,15 @@
 <body>
 <div class="container">
     <div class="profile-section">
-        <div class="profile">Profile</div>
+        <div>
+        <button class="profileBtn" type="submit">Profile</button>
+        </div>
+        <div class="star"></div>
+        <div class="star1"></div>
+        <div class="star2"></div>
+        <div class="star3"></div>
+        <div class="star4"></div>
+        <script src="../script/Star.js"></script>
     </div>
     <div class="main-section">
         <div class="title">Forum</div>
