[main/etoileTest] petites modif html

--- a/template/html/post.html
+++ b/template/html/post.html
@@ -30,7 +30,7 @@
             <div class="comments">
                 <h3>Commentaires</h3>
                 <div class="comment">
-                    <input class="comment-author" placeholder="Nom de l'utilisateur">
+                    <div class="post-author">Auteur: <span class="author-name">Nom de l'utilisateur</span></div>
                     <label>
                         <textarea class="comment-text" placeholder="Commentaire sur le post."></textarea>
                     </label>
