--- a/template/html/accueil.html
+++ b/template/html/accueil.html
@@ -1,35 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/style/accueil.css">
-    <link rel="icon" type="image/vnd.icon" href="../ressource/image/maga.JPG">
-    <script src="/script/accueil.js"></script>
-    <title>Le Forum</title>
+    <title>Forum</title>
+    <link rel="stylesheet" href="../css/post.css">
 </head>
-
 <body>
-    <h1>Bienvenue sur le Forum </h1>
-    <h2>Les sujets du forum</h2>
-    <!-- ajout d'image -->
-        <form id="commentForm">
-            <textarea name="comment" required></textarea>
-            <input type="file" id="imageUpload" accept="/*"/><br><br>
-            <button type="submit">Post Comment</button>
-        </form>
-        <br><br> 
+<div class="container">
+    <div class="profile-section">
+        <div class="profile">Profile</div>
+    </div>
+    <div class="main-section">
+        <div class="title">Bienvenue sur le Forum</div>
+        <div class="post-detail">
+            <div class="post-feed">
+                <input type="text" class="post-title" placeholder="recherche d'un Post">
 
- <!-- ajout de topic -->
-        <form action="/back/route.go" method="post">
-            <label for="title">Title:</label>
-            <input type="text" name="title" id="title"required><br><br>
-            <label for="description">Description:</label>
-            <textarea name="description" id="description"></textarea><br><br>
-            <input type="submit" value="Create Topic">
-        </form>
+                <div class="post-author">Auteur: <span class="author-name">Nom de l'utilisateur</span></div>
+            </div>
+            <div class="comments">
+                <h3>Commentaires</h3>
+                <div class="comment">
+                    <input class="comment-author" placeholder="Nom de l'utilisateur">
+                    <label>
+                        <textarea class="comment-text" placeholder="Commentaire sur le post."></textarea>
+                    </label>
+                </div>
+            </div>
+        </div>
 
+        <div class="post-detail">
+            <div class="post-feed">
+                <input type="text" class="post-title" placeholder="recherche d'un Post">
+
+                <div class="post-author">Auteur: <span class="author-name">Nom de l'utilisateur</span></div>
+            </div>
+            <div class="comments">
+                <h3>Commentaires</h3>
+                <div class="comment">
+                    <input class="comment-author" placeholder="Nom de l'utilisateur">
+                    <label>
+                        <textarea class="comment-text" placeholder="Commentaire sur le post."></textarea>
+                    </label>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+
+    <div class="side-section">
+        <div class="categories">
+            <form id="createCategoryForm" method="POST" action="/CreateCategory">
+                <input type="text" class="createCategory" name="categoryName" placeholder="Enter new category">
+                <button class="categoryBtn" type="submit">Create</button>
+            </form>
+            <h3>Categories</h3>
+            <ul id="categoriesList">
+                <li>Granny</li>
+                <li>Granny</li>
+                <li>Granny</li>
+            </ul>
+        </div>
+        <div class="hashtags">
+            <form id="createHashtagForm" method="POST" action="/Create#">
+                <input type="text" class="createHashtags" name="hashtagsName" placeholder="Enter new hashtags">
+                <button class="hashtagsBtn" type="submit">Create</button>
+            </form>
+            <h3>Hashtags</h3>
+            <ul id="hashtagsList">
+                <li>#mesboules</li>
+                <li>#mesboules</li>
+            </ul>
+        </div>
+    </div>
+</div>
+<script src="../script/category.js"></script>
+<script src="../script/hashtag.js"></script>
 </body>
-
 </html>
