--- a/template/html/post.html
+++ b/template/html/post.html
@@ -26,6 +26,7 @@
                 <input type="text" class="post-title" placeholder="Titre du Post">
                 <textarea class="post-description" placeholder="Description détaillée du post."></textarea>
                 <div class="post-author">Auteur: <span class="author-name">Nom de l'utilisateur</span></div>
+                <button class="post-Button" formmethod="post">POSTEZ !</button>
             </div>
             <div class="comments">
                 <h3>Commentaires</h3>
@@ -36,11 +37,18 @@
                     </label>
                 </div>
             </div>
+            <button class="comment-Button" formmethod="post">COMMENTEZ</button>
         </div>
     </div>
 
     <div class="side-section">
         <div class="categories">
+            <div class="star5"></div>
+            <div class="star6"></div>
+            <div class="star7"></div>
+            <div class="star8"></div>
+            <div class="star9"></div>
+            <script src="../script/Star2.js"></script>
             <form id="createCategoryForm" method="POST" action="/CreateCategory">
                 <input type="text" class="createCategory" name="categoryName" placeholder="Enter new category">
                 <button class="categoryBtn" type="submit">Create</button>
