--- a/template/html/accueil.html
+++ b/template/html/accueil.html
@@ -15,9 +15,8 @@
         <div class="title">Bienvenue sur le Forum</div>
         <div class="post-detail">
             <div class="post-feed">
-                <input type="text" class="post-title" placeholder="recherche d'un Post">
-
                 <div class="post-author">Auteur: <span class="author-name">Nom de l'utilisateur</span></div>
+                <div>(mettre le feed de post)</div>
             </div>
             <div class="comments">
                 <h3>Commentaires</h3>
