--- a/template/html/profil.html
+++ b/template/html/profil.html
@@ -33,6 +33,13 @@
             </div>
         </div>
     </div>
+
+    <div class="post-detail">
+        <div class="post-feed">
+            <span class="author-topic">(mettre ses topic)</span>
+        </div>
+    </div>
+
 </div>
 </body>
 </html>
