--- a/template/html/post.html
+++ b/template/html/post.html
@@ -10,7 +10,7 @@
 <div class="container">
     <div class="profile-section">
         <div>
-        <button class="profileBtn" type="submit">Profile</button>
+        <button class="profileBtn" type="submit" formmethod="get">Profile</button>
         </div>
         <div class="star"></div>
         <div class="star1"></div>
@@ -51,7 +51,7 @@
             <script src="../script/Star2.js"></script>
             <form id="createCategoryForm" method="POST" action="/CreateCategory">
                 <input type="text" class="createCategory" name="categoryName" placeholder="Enter new category">
-                <button class="categoryBtn" type="submit">Create</button>
+                <button class="categoryBtn" type="submit" formmethod="post">Create</button>
             </form>
             <h3>Categories</h3>
             <ul id="categoriesList">
@@ -63,7 +63,7 @@
         <div class="hashtags">
             <form id="createHashtagForm" method="POST" action="/Create#">
                 <input type="text" class="createHashtags" name="hashtagsName" placeholder="Enter new hashtags">
-                <button class="hashtagsBtn" type="submit">Create</button>
+                <button class="hashtagsBtn" type="submit" formmethod="post">Create</button>
             </form>
             <h3>Hashtags</h3>
             <ul id="hashtagsList">
