--- a/template/html/post.html
+++ b/template/html/post.html
@@ -59,5 +59,6 @@
 </div>
 <script src="../script/category.js"></script>
 <script src="../script/hashtag.js"></script>
+<script src="../script/scroller.js"></script>
 </body>
 </html>
